fixed about me spacing

--- a/style.css
+++ b/style.css
@@ -147,10 +147,6 @@ a {
     padding-left: 1.8rem;
 }
 
-.about-list-fav {
-    padding-right: 8rem;
-}
-
 .about-list-fav ul {
     padding-top: .6rem;
     padding-left: 1.8rem;
